--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build --webpack",
     "start": "next start",
+    "preview": "node scripts/preview.mjs",
     "lint": "eslint"
   },
   "dependencies": {
